...
    }
    
    // MARK: - Convenience
    
    /// Configures the table view
    private func setupTableView() {
        tableView.accessibilityIdentifier = "cityListTableView"
        tableView.register(CityTableViewCell.self, forCellReuseIdentifier: CityViewModel.reuseIdentifier)
        tableView.estimatedRowHeight = 64
        tableView.rowHeight = UITableView.automaticDimension
        tableView.tableFooterView = UIView()            // remove empty cell separator lines
    }
    
...
    /**
     Displays an error alert to the user as a `UIAlertController`.
     
     - parameter message: The message to be displayed to the user as an error.
    */
    private func displayError(message: String) {
        let alertController = UIAlertController(title: "Error", message: message, preferredStyle: .alert)
        let dismissAction = UIAlertAction(title: "Dismiss", style: .default, handler: nil)
        alertController.addAction(dismissAction)
        present(alertController, animated: true)
    }
    
    /**
...
